--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -10,12 +10,6 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
-      - name: 'Terraform Format'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: "fmt"
-      
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
         with:
@@ -24,12 +18,12 @@ jobs:
           # tf_actions_working_dir: '.'
           # tf_actions_comment: true
           # tf_actions_cli_credentials_token: ${{ secrets.TF_API_TOKEN }}
-          args: '-backend-config="token=${{ secrets.TF_DIGITALOCEAN_TOKEN }}"'          
+          # args: '-backend-config="token=${{ secrets.TF_DIGITALOCEAN_TOKEN }}"'          
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 'Terraform Plan'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'plan'
-          # tf_actions_working_dir: '.'
+      # - name: 'Terraform Plan'
+      #   uses: hashicorp/terraform-github-actions@master
+      #   with:
+      #     tf_actions_version: 0.12.13
+      #     tf_actions_subcommand: 'plan'
+      #     # tf_actions_working_dir: '.'
