--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           tf_actions_version: 0.12.13
           tf_actions_subcommand: 'plan'
-          # tf_actions_cli_credentials_token: ${{ secrets.TF_API_TOKEN }}
-          # args: '-backend-config="token=${{ secrets.TF_DIGITALOCEAN_TOKEN }}"'          
+          tf_actions_cli_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          args: '-backend-config="token=${{ secrets.TF_DIGITALOCEAN_TOKEN }}"'          
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
