--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -13,18 +13,18 @@ jobs:
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: 0.12.13
+          tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: '.'
           tf_actions_comment: true
-          tf_actions_cli_credentials_token: ${{ secrets.TF_API_TOKEN }}
-          args: '-backend-config="token=${{ secrets.TF_DIGITALOCEAN_TOKEN }}"'          
+          # tf_actions_cli_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          # args: '-backend-config="token=${{ secrets.TF_DIGITALOCEAN_TOKEN }}"'          
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Plan'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: 0.12.13
+          tf_actions_version: 0.12.18
           tf_actions_subcommand: 'plan'
           tf_actions_cli_credentials_token: ${{ secrets.TF_API_TOKEN }}
           # args: '-backend-config="token=${{ secrets.TF_DIGITALOCEAN_TOKEN }}"'          
