--- a/.github/workflows/aws-deployment.yml
+++ b/.github/workflows/aws-deployment.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'apply'
-          args: '-var="do_token=${{ secrets.TF_API_TOKEN }}"'          
+          args: '-var="AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID}}"'
+          args: '-var="AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY}}"'           
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
