--- a/.github/workflows/aws-deployment.yml
+++ b/.github/workflows/aws-deployment.yml
@@ -25,14 +25,12 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'plan'
-          args: '-var="AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID}}"'
-          args: '-var="AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY}}"'          
+          args: '-var="AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID}}" -var="AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY}}"'
       - name: 'Terraform Apply'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'apply'
-          args: '-var="AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID}}"'
-          args: '-var="AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY}}"'           
+          args: '-var="AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID}}" -var="AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY}}"'       
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
