--- a/.github/workflows/aws-deployment.yml
+++ b/.github/workflows/aws-deployment.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
-          tf_actions_working_dir: '.'
+          tf_actions_working_dir: 'setups/AWS'
           tf_actions_comment: true
       
         env:
@@ -25,12 +25,14 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'plan'
+          tf_actions_working_dir: 'setups/AWS'
           args: '-var="AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID}}" -var="AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY}}"'
       - name: 'Terraform Apply'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'apply'
+          tf_actions_working_dir: 'setups/AWS'
           args: '-var="AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID}}" -var="AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY}}"'       
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
