--- a/.github/workflows/aws-plan.yml
+++ b/.github/workflows/aws-plan.yml
@@ -13,10 +13,10 @@ jobs:
 
      # Static analysis of Terraform templates to spot potential security issues
      # Marketplace: https://github.com/marketplace/actions/terraform-security-scan   
-      - name: "Setup - Security Scan"
-        uses: triat/terraform-security-scan@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: "Setup - Security Scan"
+      #   uses: triat/terraform-security-scan@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
      # Provides AWS credentials to Terraform
      # By default, Terraform checks the home directory for a .aws folder with a credential file
