changing the terraform github modules

--- a/.github/workflows/aws-plan.yml
+++ b/.github/workflows/aws-plan.yml
@@ -30,8 +30,8 @@ jobs:
      
      
      
-      - name: "Setup - Terraform CLI"
-        uses: hashicorp/setup-terraform@v1.0.1
+      # - name: "Setup - Terraform CLI"
+      #   uses: hashicorp/setup-terraform@v1.0.1
 
       # Init pulls credentials from the .aws/credentials file by default
       - name: "Run - Terraform Init"
