--- a/.github/workflows/aws-plan.yml
+++ b/.github/workflows/aws-plan.yml
@@ -1,12 +1,16 @@
-name: Terraform Github Actions AWS Cloud
+name: Terraform Plan AWS 
 
 on: 
   push
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Terraform Plan'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: setup/AWS
+
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v2.1.0
