--- a/.github/workflows/aws-plan.yml
+++ b/.github/workflows/aws-plan.yml
@@ -36,14 +36,14 @@ jobs:
       # Init pulls credentials from the .aws/credentials file by default
       - name: "Run - Terraform Init"
         run: terraform init -input=false
-        working-directory: setup/AWS
+        working-directory: ./setup/AWS
 
       # The id value is used for reference in the comment step via "steps.plan.outputs.stdout"
       # Note: Color is disabled to prevent messy characters from appearing in the pull request comment
       - name: "Run - Terraform Plan"
         id: plan
         run: terraform plan -input=false -no-color
-        working-directory: setup/AWS
+        working-directory: ./setup/AWS
 
       # Submit a comment with the plan output to the pull request
       - name: "Run - Terraform Comment"
