--- a/.github/workflows/aws-plan.yml
+++ b/.github/workflows/aws-plan.yml
@@ -49,7 +49,7 @@ jobs:
       - name: "Terraform Comment"
         uses: actions/github-script@0.9.0
         env:
-          PLAN: "${{ steps.plan.outputs.stdout }}"
+          PLAN: ${{ steps.plan.outputs.stdout }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
