--- a/.github/workflows/aws-planTF.yml
+++ b/.github/workflows/aws-planTF.yml
@@ -48,16 +48,16 @@ jobs:
       # Submit a comment with the plan output to the pull request
       - name: "Terraform Comment"
         uses: actions/github-script@0.9.0
-        env:
-          PLAN: "${{ steps.plan.outputs.stdout }}"
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
+        # env:
+        #   PLAN: "${{ steps.plan.outputs.stdout }}"
+        # with:
+        #   github-token: ${{ secrets.GITHUB_TOKEN }}
+        #   script: |
+        #     github.issues.createComment({
+        #       owner: context.repo.owner,
+        #       repo: context.repo.repo,
+        #       body: output
+        #     })
 
 
 
