adding github comments

--- a/.github/workflows/aws-planTF.yml
+++ b/.github/workflows/aws-planTF.yml
@@ -46,8 +46,8 @@ jobs:
         working-directory: ./setup/AWS
 
       # Submit a comment with the plan output to the pull request
-      - name: "Terraform Comment"
-        uses: actions/github-script@0.9.0
+      # - name: "Terraform Comment"
+      #   uses: actions/github-script@0.9.0
         # env:
         #   PLAN: "${{ steps.plan.outputs.stdout }}"
         # with:
