--- a/.github/workflows/aws-applyTF.yml
+++ b/.github/workflows/aws-applyTF.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   terraform:
-    name: 'Terraform Plan'
+    name: 'Terraform Apply'
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
