--- a/.github/workflows/aws-tf-plan.yml
+++ b/.github/workflows/aws-tf-plan.yml
@@ -43,7 +43,7 @@ jobs:
       # Note: Color is disabled to prevent messy characters from appearing in the pull request comment
       - name: "Terraform Plan"
         id: plan
-        run: terraform plan -input=false -no-color
+        run: terraform plan -input=false 
         working-directory: ./setup/AWS
 
       # Submit a comment with the plan output to the pull request
